# IA_financial_assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agent/: README.md  __init__.py  answer_builder.py  api.py  backend_client.py  bank_catalog.py  deterministic_nlu.py  factory.py  import_label_normalizer.py  llm_judge.py  llm_planner.py  loop.py  main.py  memory.py  merchant_alias_resolver.py  merchant_cleanup.py  planner.py  tool_router.py
ai/: README.md  prompts.md
backend/: README.md  __init__.py  factory.py  main.py
docs/: architecture.md  merchants_model.md  releves_import_mapping.md  runbook.md  tool_contracts.md
infra/: README.md  docker-compose.yml
pydantic/: __init__.py
scripts/: generate_profile_scenarios.py
shared/: __init__.py  config.py  models.py  profile_fields.py  text_utils.py
tests/: fakes.py  test_agent_api.py  test_agent_api_active_task.py  test_agent_api_canonicalize_merchant.py  test_agent_api_finance_endpoints.py  test_agent_api_import_account_clarification.py  test_agent_api_import_releves_auto_resolve.py  test_agent_api_import_releves_with_cleanup.py  test_agent_api_memory_followup.py  test_agent_api_merchant_suggestions_resolve.py  test_agent_api_recurring_clusters.py  test_agent_api_resolve_pending_aliases.py  test_agent_api_spending_report_pagination.py  test_agent_confidence_meta.py  test_agent_factory.py  test_agent_factory_llm.py  test_agent_loop.py  test_agent_loop_clarification_pending.py  test_agent_loop_gated.py  test_agent_loop_llm_guardian.py  test_agent_loop_tool_reply.py  test_answer_builder.py  test_api_cors_and_chat.py  test_apply_map_alias_suggestion.py  test_backend_factory.py  test_bank_accounts_repository.py  test_bank_accounts_tools.py  test_bank_detector.py  test_categories_repository.py  test_categories_tools.py  test_clarification_memory_fallback.py  test_classification_decision_engine.py  (+46 more)
(+134 files in other folders)
