[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-financial-assistant"
version = "0.1.0"
description = "Architecture skeleton for an AI financial assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["backend*", "agent*", "shared*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
