[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-financial-assistant"
version = "0.1.0"
description = "Architecture skeleton for an AI financial assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["backend*", "agent*", "shared*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
